# Intelligent_CBS

./: .gitignore  README.md
code/: CMakeLists.txt  Makefile
code/data/: generate_instances.cpp
code/data/test_instances/: 0.txt  1.txt
code/data/train_instances/: 0.txt  1.txt
code/include/: AStar.hpp  CBSSolver.hpp  ConflictModel.hpp  DataLoader.hpp  GenerateInstance.hpp  Instance.hpp  MAPFInstance.hpp
code/src/: AStar.cpp  CBSSolver.cpp  CollectData.cpp  ConflictModel.cpp  DataLoader.cpp  EvalModel.cpp  GenerateData.cpp  GenerateInstance.cpp  Instance.cpp  OnlineEval.cpp  TrainModel.cpp
code/test/: testCBS.cpp
